--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
                <div class="services obrz">
                   <div class="services_pic">
                      <img src="https://i.pinimg.com/originals/98/47/5d/98475d955d4a1c80fc12e5cdd459b13a.jpg" alt="Kazuma Kiryu">
-                     <button type="button" class="btn btn-outline-dark">Посмотреть образ</button>
+                     <button type="button" class="btn btn-outline-dark" onClick='location.href="http://127.0.0.1:5500/UnderConstraction.html "'>Посмотреть образ</button>
                   </div>
                   <div class="services_pic">
                      <img src="https://i.pinimg.com/736x/3e/31/06/3e3106293edc7cd68626bf8f60c200fc--deus-ex-mankind-divided-jensen.jpg" alt="Jensen">
-                     <button type="button" class="btn btn-outline-dark">Посмотреть образ</button>
+                     <button type="button" class="btn btn-outline-dark" onClick='location.href="http://127.0.0.1:5500/UnderConstraction.html "'>Посмотреть образ</button>
                   </div>
                   <div class="services_pic">
                      <img src="https://i.pinimg.com/originals/26/a5/c5/26a5c53ae4a351b19c362d8c958cca18.png" alt="Kristian B.">
-                     <button type="button" class="btn btn-outline-dark">Посмотреть образ</button>
+                     <button type="button" class="btn btn-outline-dark" onClick='location.href="http://127.0.0.1:5500/UnderConstraction.html "'>Посмотреть образ</button>
                   </div>
                   <div class="services_pic">
-                     <img src="https://www.kindpng.com/picc/m/310-3108290_ryangosling-ryan-gosling-oscar-oscars-oscar2019-hd-png.png" alt="Rayan G.">
-                     <button type="button" class="btn btn-outline-dark">Посмотреть образ</button>
+                     <img src="https://mykaleidoscope.ru/x/uploads/posts/2022-09/1663321638_17-mykaleidoscope-ru-p-raian-gosling-instagram-19.jpg" alt="Ryan Gosling">
+                     <button type="button" class="btn btn-outline-dark" onClick='location.href="http://127.0.0.1:5500/UnderConstraction.html "'>Посмотреть образ</button>
                   </div>
                   <div class="services_pic">
                      <img src="https://i.pinimg.com/736x/1d/ed/54/1ded54926e2eb787471070725c89e7a8--mads-mikkelsen.jpg" alt="Mads M." >
-                     <button type="button" class="btn btn-outline-dark">Посмотреть образ</button>
+                     <button type="button" class="btn btn-outline-dark" onClick='location.href="http://127.0.0.1:5500/UnderConstraction.html "'>Посмотреть образ</button>
                   </div>
                   <div class="services_pic">
                      <img src="/photo/himeno_qn0ln.9ZC3l.png" alt="Himeno">
-                     <button type="button" class="btn btn-outline-dark">Посмотреть образ</button>
+                     <button type="button" class="btn btn-outline-dark" onClick='location.href="http://127.0.0.1:5500/UnderConstraction.html "'>Посмотреть образ</button>
                   </div>
                </div>
          <div class="control"> 
@@ -77,11 +77,11 @@
             <form id = "userRegg">
                <label>
                   E-mail: 
-                  <input type="text" name="email">
+                  <input type="text" name="eMail">
                </label>
                <label>
                   Password: 
-                  <input type="text" name="password">
+                  <input type="password" name="password">
                </label>
             </form>
           </div>
